--- a/index.htm
+++ b/index.htm
@@ -1039,13 +1039,13 @@ src="image/step1-virtualBox-6.1_files/image004.png" v:shapes="Picture_x0020_4"><
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Click Install, this will trigger “User Account
-Control” displaying the following message. </p>
+</span></span></span><![endif]>Click Install, this will trigger Â“User Account
+ControlÂ” displaying the following message. </p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
-<p class=MsoListParagraphCxSpMiddle>“Do you want to allow this app to make
-changes to your device?”</p>
+<p class=MsoListParagraphCxSpMiddle>Â“Do you want to allow this app to make
+changes to your device?Â”</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1074,7 +1074,7 @@ src="image/step1-virtualBox-6.1_files/image005.png" v:shapes="Picture_x0020_5"><
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Don’t update to 6.1.18 or don’t click OK,
+</span></span></span><![endif]>DonÂ’t update to 6.1.18 or donÂ’t click OK,
 instead close this window. </p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
@@ -1091,7 +1091,7 @@ src="image/step1-virtualBox-6.1_files/image006.png" v:shapes="Picture_x0020_6"><
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Next, download the “Extension Pack” from the
+</span></span></span><![endif]>Next, download the Â“Extension PackÂ” from the
 following link.</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
@@ -1107,7 +1107,7 @@ href="https://download.virtualbox.org/virtualbox/6.1.16/Oracle_VM_VirtualBox_Ext
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>10.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]>Start the Extension Package installer and click
-“I Agree”</p>
+Â“I AgreeÂ”</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1123,13 +1123,13 @@ src="image/step1-virtualBox-6.1_files/image007.png" v:shapes="Picture_x0020_7"><
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>11.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>This will trigger “User Account Control”
+</span></span></span><![endif]>This will trigger Â“User Account ControlÂ”
 displaying the following message. </p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
-<p class=MsoListParagraphCxSpMiddle>“Do you want to allow this app to make
-changes to your device?”</p>
+<p class=MsoListParagraphCxSpMiddle>Â“Do you want to allow this app to make
+changes to your device?Â”</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
