--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Word.Document>
 <meta name=Generator content="Microsoft Word 15">
 <meta name=Originator content="Microsoft Word 15">
-<link rel=File-List href="image/step1-virtualBox-6.1_files/filelist.xml">
-<link rel=Edit-Time-Data href="image/step1-virtualBox-6.1_files/editdata.mso">
+<link rel=File-List href="images/step1-virtualBox-6.1_files/filelist.xml">
+<link rel=Edit-Time-Data href="images/step1-virtualBox-6.1_files/editdata.mso">
 <!--[if !mso]>
 <style>
 v\:* {behavior:url(#default#VML);}
@@ -41,9 +41,9 @@ w\:* {behavior:url(#default#VML);}
   <o:TargetScreenSize>800x600</o:TargetScreenSize>
  </o:OfficeDocumentSettings>
 </xml><![endif]-->
-<link rel=themeData href="image/step1-virtualBox-6.1_files/themedata.thmx">
+<link rel=themeData href="images/step1-virtualBox-6.1_files/themedata.thmx">
 <link rel=colorSchemeMapping
-href="image/step1-virtualBox-6.1_files/colorschememapping.xml">
+href="images/step1-virtualBox-6.1_files/colorschememapping.xml">
 <!--[if gte mso 9]><xml>
  <w:WordDocument>
   <w:SpellingState>Clean</w:SpellingState>
@@ -984,9 +984,9 @@ installer and Click Next.</p>
  <o:lock v:ext="edit" aspectratio="t"/>
 </v:shapetype><v:shape id="Picture_x0020_1" o:spid="_x0000_i1032" type="#_x0000_t75"
  style='width:463.8pt;height:362.4pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="image/step1-virtualBox-6.1_files/image001.png" o:title=""/>
+ <v:imagedata src="images/step1-virtualBox-6.1_files/image001.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=618 height=483
-src="image/step1-virtualBox-6.1_files/image001.png" v:shapes="Picture_x0020_1"><![endif]></span></p>
+src="images/step1-virtualBox-6.1_files/image001.png" v:shapes="Picture_x0020_1"><![endif]></span></p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -999,9 +999,9 @@ class=GramE>Next</span>.</p>
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_2" o:spid="_x0000_i1031" type="#_x0000_t75" style='width:463.8pt;
  height:362.4pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="image/step1-virtualBox-6.1_files/image002.png" o:title=""/>
+ <v:imagedata src="images/step1-virtualBox-6.1_files/image002.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=618 height=483
-src="image/step1-virtualBox-6.1_files/image002.png" v:shapes="Picture_x0020_2"><![endif]></span></p>
+src="images/step1-virtualBox-6.1_files/image002.png" v:shapes="Picture_x0020_2"><![endif]></span></p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1016,9 +1016,9 @@ class=GramE>Next</span>.</p>
 style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape id="Picture_x0020_3"
  o:spid="_x0000_i1030" type="#_x0000_t75" style='width:463.8pt;height:362.4pt;
  visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="image/step1-virtualBox-6.1_files/image003.png" o:title=""/>
+ <v:imagedata src="images/step1-virtualBox-6.1_files/image003.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=618 height=483
-src="image/step1-virtualBox-6.1_files/image003.png" v:shapes="Picture_x0020_3"><![endif]></span></p>
+src="images/step1-virtualBox-6.1_files/image003.png" v:shapes="Picture_x0020_3"><![endif]></span></p>
 
 <p class=MsoNormal style='margin-left:.25in'><o:p>&nbsp;</o:p></p>
 
@@ -1030,22 +1030,22 @@ style='mso-list:Ignore'>5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_4" o:spid="_x0000_i1029" type="#_x0000_t75" style='width:463.8pt;
  height:362.4pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="image/step1-virtualBox-6.1_files/image004.png" o:title=""/>
+ <v:imagedata src="images/step1-virtualBox-6.1_files/image004.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=618 height=483
-src="image/step1-virtualBox-6.1_files/image004.png" v:shapes="Picture_x0020_4"><![endif]></span></p>
+src="images/step1-virtualBox-6.1_files/image004.png" v:shapes="Picture_x0020_4"><![endif]></span></p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>6.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Click Install, this will trigger Â“User Account
-ControlÂ” displaying the following message. </p>
+</span></span></span><![endif]>Click Install, this will trigger “User Account
+Control” displaying the following message. </p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
-<p class=MsoListParagraphCxSpMiddle>Â“Do you want to allow this app to make
-changes to your device?Â”</p>
+<p class=MsoListParagraphCxSpMiddle>“Do you want to allow this app to make
+changes to your device?”</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1063,9 +1063,9 @@ style='mso-list:Ignore'>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_5" o:spid="_x0000_i1028" type="#_x0000_t75" style='width:463.8pt;
  height:362.4pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="image/step1-virtualBox-6.1_files/image005.png" o:title=""/>
+ <v:imagedata src="images/step1-virtualBox-6.1_files/image005.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=618 height=483
-src="image/step1-virtualBox-6.1_files/image005.png" v:shapes="Picture_x0020_5"><![endif]></span></p>
+src="images/step1-virtualBox-6.1_files/image005.png" v:shapes="Picture_x0020_5"><![endif]></span></p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1074,7 +1074,7 @@ src="image/step1-virtualBox-6.1_files/image005.png" v:shapes="Picture_x0020_5"><
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>DonÂ’t update to 6.1.18 or donÂ’t click OK,
+</span></span></span><![endif]>Don’t update to 6.1.18 or don’t click OK,
 instead close this window. </p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
@@ -1082,16 +1082,16 @@ instead close this window. </p>
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_6" o:spid="_x0000_i1027" type="#_x0000_t75" style='width:287.4pt;
  height:164.4pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="image/step1-virtualBox-6.1_files/image006.png" o:title=""/>
+ <v:imagedata src="images/step1-virtualBox-6.1_files/image006.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=383 height=219
-src="image/step1-virtualBox-6.1_files/image006.png" v:shapes="Picture_x0020_6"><![endif]></span></p>
+src="images/step1-virtualBox-6.1_files/image006.png" v:shapes="Picture_x0020_6"><![endif]></span></p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Next, download the Â“Extension PackÂ” from the
+</span></span></span><![endif]>Next, download the “Extension Pack” from the
 following link.</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
@@ -1107,29 +1107,29 @@ href="https://download.virtualbox.org/virtualbox/6.1.16/Oracle_VM_VirtualBox_Ext
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>10.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]>Start the Extension Package installer and click
-Â“I AgreeÂ”</p>
+“I Agree”</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_7" o:spid="_x0000_i1026" type="#_x0000_t75" style='width:451.8pt;
  height:366.6pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="image/step1-virtualBox-6.1_files/image007.png" o:title=""/>
+ <v:imagedata src="images/step1-virtualBox-6.1_files/image007.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=602 height=489
-src="image/step1-virtualBox-6.1_files/image007.png" v:shapes="Picture_x0020_7"><![endif]></span></p>
+src="images/step1-virtualBox-6.1_files/image007.png" v:shapes="Picture_x0020_7"><![endif]></span></p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>11.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>This will trigger Â“User Account ControlÂ”
+</span></span></span><![endif]>This will trigger “User Account Control”
 displaying the following message. </p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
-<p class=MsoListParagraphCxSpMiddle>Â“Do you want to allow this app to make
-changes to your device?Â”</p>
+<p class=MsoListParagraphCxSpMiddle>“Do you want to allow this app to make
+changes to your device?”</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1145,9 +1145,9 @@ style='mso-list:Ignore'>12.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbs
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_8" o:spid="_x0000_i1025" type="#_x0000_t75" style='width:250.8pt;
  height:122.4pt;visibility:visible;mso-wrap-style:square'>
- <v:imagedata src="image/step1-virtualBox-6.1_files/image008.png" o:title=""/>
+ <v:imagedata src="images/step1-virtualBox-6.1_files/image008.png" o:title=""/>
 </v:shape><![endif]--><![if !vml]><img border=0 width=334 height=163
-src="image/step1-virtualBox-6.1_files/image008.png" v:shapes="Picture_x0020_8"><![endif]></span></p>
+src="images/step1-virtualBox-6.1_files/image008.png" v:shapes="Picture_x0020_8"><![endif]></span></p>
 
 <p class=MsoListParagraphCxSpLast><o:p>&nbsp;</o:p></p>
 
