--- a/step1-virtualBox-6.1.html
+++ b/step1-virtualBox-6.1.html
@@ -1074,7 +1074,7 @@ src="images/step1-virtualBox-6.1_files/image005.png" v:shapes="Picture_x0020_5">
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Don’t update to 6.1.18 or don’t click OK,
+</span></span></span><![endif]>DonÂ’t update to 6.1.18 or donÂ’t click OK,
 instead close this window. </p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
