--- a/step2-create-a-vm.html
+++ b/step2-create-a-vm.html
@@ -964,7 +964,7 @@ style='mso-list:Ignore'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp
 <p class=MsoListParagraphCxSpLast style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Create a new VM from “Machine” <span
+</span></span></span><![endif]>Create a new VM from "Machine" <span
 style='font-family:Wingdings;mso-ascii-font-family:Calibri;mso-ascii-theme-font:
 minor-latin;mso-hansi-font-family:Calibri;mso-hansi-theme-font:minor-latin;
 mso-char-type:symbol;mso-symbol-font-family:Wingdings'><span style='mso-char-type:
@@ -1052,8 +1052,8 @@ on physical hard disk:</b> Fixed size.</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
-<p class=MsoListParagraphCxSpLast>Click <span style='background:yellow;
-mso-highlight:yellow'>Create</span> after setting this <span class=SpellE>configs</span>.
+<p class=MsoListParagraphCxSpLast>click <span style='background:yellow;
+mso-highlight:yellow'>Create</span> <span class=SpellE> </span>.
 It will take some time to create a 70 GB file on the disk. </p>
 
 <p class=MsoNormal><span style='mso-tab-count:1'>               </span><span
@@ -1086,11 +1086,11 @@ src="images/step2-create-a-vm_files/image008.jpg" v:shapes="Picture_x0020_38"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>7.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Under “General” <span style='font-family:Wingdings;
+</span></span></span><![endif]>Under "General" <span style='font-family:Wingdings;
 mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-hansi-font-family:
 Calibri;mso-hansi-theme-font:minor-latin;mso-char-type:symbol;mso-symbol-font-family:
 Wingdings'><span style='mso-char-type:symbol;mso-symbol-font-family:Wingdings'>à</span></span>
-“Advanced” select <span style='background:yellow;mso-highlight:yellow'>Bidirectional</span>
+"Advanced" select <span style='background:yellow;mso-highlight:yellow'>Bidirectional</span>
 if it not already selected.</p>
 
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
@@ -1105,7 +1105,7 @@ src="images/step2-create-a-vm_files/image010.jpg" v:shapes="Picture_x0020_45"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>8.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Under “System” <span style='font-family:Wingdings;
+</span></span></span><![endif]>Under "System" <span style='font-family:Wingdings;
 mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-hansi-font-family:
 Calibri;mso-hansi-theme-font:minor-latin;mso-char-type:symbol;mso-symbol-font-family:
 Wingdings'><span style='mso-char-type:symbol;mso-symbol-font-family:Wingdings'>à</span></span>
@@ -1127,12 +1127,12 @@ src="images/step2-create-a-vm_files/image012.jpg" v:shapes="Picture_x0020_46"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>9.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span></span><![endif]>Under “System” <span style='font-family:Wingdings;
+</span></span></span><![endif]>Under "System" <span style='font-family:Wingdings;
 mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-hansi-font-family:
 Calibri;mso-hansi-theme-font:minor-latin;mso-char-type:symbol;mso-symbol-font-family:
 Wingdings'><span style='mso-char-type:symbol;mso-symbol-font-family:Wingdings'>à</span></span>
-“Processor”, increase the value to 2 and selected “<span style='background:
-yellow;mso-highlight:yellow'>Enable PAE/NX</span>”</p>
+"Processor", increase the value to 2 and selected "<span style='background:
+yellow;mso-highlight:yellow'>Enable PAE/NX</span>"</p>
 
 <p class=MsoListParagraphCxSpMiddle>Note: you may not have this option as it
 depends on the type of actual CPU of your laptop. </p>
@@ -1151,11 +1151,11 @@ src="images/step2-create-a-vm_files/image014.jpg" v:shapes="Picture_x0020_47"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>10.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Under “System” <span style='font-family:Wingdings;
+</span></span></span><![endif]>Under "System" <span style='font-family:Wingdings;
 mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-hansi-font-family:
 Calibri;mso-hansi-theme-font:minor-latin;mso-char-type:symbol;mso-symbol-font-family:
 Wingdings'><span style='mso-char-type:symbol;mso-symbol-font-family:Wingdings'>à</span></span>
-“Acceleration” check the “Enable Nested Paging” if it is not enabled. </p>
+"Acceleration" check the "Enable Nested Paging" if it is not enabled. </p>
 
 <p class=MsoListParagraphCxSpMiddle>Note: you may not have this option as it
 depends on the type of actual CPU of your laptop. </p>
@@ -1172,11 +1172,11 @@ src="images/step2-create-a-vm_files/image016.jpg" v:shapes="Picture_x0020_48"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>11.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Under “Display” <span style='font-family:Wingdings;
+</span></span></span><![endif]>Under "Display" <span style='font-family:Wingdings;
 mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-hansi-font-family:
 Calibri;mso-hansi-theme-font:minor-latin;mso-char-type:symbol;mso-symbol-font-family:
 Wingdings'><span style='mso-char-type:symbol;mso-symbol-font-family:Wingdings'>à</span></span>
-“Screen” changed video memory to 64 MB.</p>
+"Screen" changed video memory to 64 MB.</p>
 
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
  id="Picture_x0020_49" o:spid="_x0000_i1037" type="#_x0000_t75" style='width:382.2pt;
@@ -1192,11 +1192,11 @@ src="images/step2-create-a-vm_files/image018.jpg" v:shapes="Picture_x0020_49"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>12.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Under “Storage” <span style='font-family:Wingdings;
+</span></span></span><![endif]>Under "Storage" <span style='font-family:Wingdings;
 mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-hansi-font-family:
 Calibri;mso-hansi-theme-font:minor-latin;mso-char-type:symbol;mso-symbol-font-family:
 Wingdings'><span style='mso-char-type:symbol;mso-symbol-font-family:Wingdings'>à</span></span>
-“Controller: IDE”, click first + sign.</p>
+"Controller: IDE", click first + sign.</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1226,7 +1226,7 @@ src="images/step2-create-a-vm_files/image022.jpg" v:shapes="Picture_x0020_53"><!
 <p class=MsoListParagraphCxSpLast style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>14.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Select “ubuntu-18.04.5-desktop-amd64.iso” and
+</span></span></span><![endif]>Select "ubuntu-18.04.5-desktop-amd64.iso" and
 then click open.</p>
 
 <p class=MsoNormal style='margin-left:.5in'><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
@@ -1282,8 +1282,8 @@ src="images/step2-create-a-vm_files/image030.jpg" v:shapes="Picture_x0020_58"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>18.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Under “User Interface”, select “Show at Top of
-Screen” and then click OK at the bottom.</p>
+</span></span></span><![endif]>Under "User Interface", select "Show at Top of
+Screen" and then click OK at the bottom.</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1309,14 +1309,14 @@ class=SpellE>VritualBox</span> completely. </p>
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>20.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Next, click “<span style='background:yellow;
-mso-highlight:yellow'>Start</span>” menu button of your Windows and type “<span
-class=SpellE><span style='background:yellow;mso-highlight:yellow'>cmd</span></span>”</p>
+</span></span></span><![endif]>Next, click "<span style='background:yellow;
+mso-highlight:yellow'>Start</span>" menu button of your Windows and type "<span
+class=SpellE><span style='background:yellow;mso-highlight:yellow'>cmd</span></span>"</p>
 
 <p class=MsoListParagraphCxSpMiddle><span style='background:red;mso-highlight:
-red'>Right click</span> on “<span style='background:yellow;mso-highlight:yellow'>Command
-Prompt</span>” and click “<span style='background:yellow;mso-highlight:yellow'>Run
-as administrator</span>”</p>
+red'>Right click</span> on "<span style='background:yellow;mso-highlight:yellow'>Command
+Prompt</span>" and click "<span style='background:yellow;mso-highlight:yellow'>Run
+as administrator</span>"</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1332,7 +1332,7 @@ src="images/step2-create-a-vm_files/image034.jpg" v:shapes="Picture_x0020_63"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>21.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Click “Yes” to the “user control” message.</p>
+</span></span></span><![endif]>Click "Yes" to the "user control" message.</p>
 
 <p class=MsoListParagraphCxSpMiddle><o:p>&nbsp;</o:p></p>
 
@@ -1374,7 +1374,7 @@ style='mso-list:Ignore'>23.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbs
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>24.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Select “Ubuntu workstation 18.04” and click
+</span></span></span><![endif]>Select "Ubuntu workstation 18.04" and click
 settings. </p>
 
 <p class=MsoListParagraphCxSpMiddle><span style='mso-no-proof:yes'><!--[if gte vml 1]><v:shape
@@ -1391,11 +1391,11 @@ src="images/step2-create-a-vm_files/image037.jpg" v:shapes="Picture_x0020_65"><!
 <p class=MsoListParagraphCxSpMiddle style='text-indent:-.25in;mso-list:l0 level1 lfo1'><![if !supportLists]><span
 style='mso-bidi-font-family:Calibri;mso-bidi-theme-font:minor-latin'><span
 style='mso-list:Ignore'>25.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
-</span></span></span><![endif]>Go under “System” <span style='font-family:Wingdings;
+</span></span></span><![endif]>Go under "System" <span style='font-family:Wingdings;
 mso-ascii-font-family:Calibri;mso-ascii-theme-font:minor-latin;mso-hansi-font-family:
 Calibri;mso-hansi-theme-font:minor-latin;mso-char-type:symbol;mso-symbol-font-family:
 Wingdings'><span style='mso-char-type:symbol;mso-symbol-font-family:Wingdings'>à</span></span>
-“Processor” and check if “”Enable Nested VT-x/AMC-V” is enabled.</p>
+"Processor" and check if ""Enable Nested VT-x/AMC-V" is enabled.</p>
 
 <p class=MsoListParagraphCxSpMiddle>Note: If it is still disabled then you
 processor does not support this feature so you can ignore it.</p>
